<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.fragments.AnimalListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/signup_title_top_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/my_animals"
            android:textColor="@color/orangeButton"
            android:textSize="@dimen/signup_title_size" />

        <TextView
            android:id="@+id/signup_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/my_animals_description"
            android:textColor="@color/grey"
            android:textSize="22dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/whitegrey"
                app:cardCornerRadius="16dp"
                app:cardElevation="2dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_gravity="bottom"
                    android:alpha="0.11"
                    android:background="@color/signup_bg_color" />

                <TextView
                    android:id="@+id/pet_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginLeft="11dp"
                    android:layout_marginRight="11dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Fluffy"
                    android:layout_gravity="bottom"
                    android:textColor="@color/orangeButton"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/plus_image"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/plus" />

                <ImageView
                    android:id="@+id/paw_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/paw_print" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_button_height"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginBottom="120dp"
        android:background="@drawable/orange_button_bg"
        android:enabled="false"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/complete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_size" />
</FrameLayout>