<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.login.singUp.RegisterDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/top_ly"
                android:layout_width="match_parent"
                android:layout_height="295dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.11"
                    android:background="#d25d04" />

                <TextView
                    android:id="@+id/signup_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="@dimen/default_margin"
                    android:layout_marginBottom="3dp"
                    android:text="@string/enter_info"
                    android:textColor="@color/orangeButton"
                    android:textSize="@dimen/signup_title_size" />

                <TextView
                    android:id="@+id/signup_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginTop="123dp"
                    android:layout_marginRight="@dimen/default_margin"
                    android:text="@string/signup_description"
                    android:textColor="@color/grey"
                    android:textSize="22dp" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/top_ly"
                android:layout_marginTop="-45dp"
                android:background="@drawable/save_info_top_rounded"
                android:elevation="10dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="41dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <!--                    <TextView-->
                    <!--                        android:id="@+id/date_of_birth_tv"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:layout_marginLeft="@dimen/margin_minimum"-->
                    <!--                        android:layout_marginRight="@dimen/margin_minimum"-->
                    <!--                        android:fontFamily="@font/poppins_semibold"-->
                    <!--                        android:text="Doğum Tarihi *"-->
                    <!--                        android:textColor="@color/input_text_color" />-->

                    <!--                    <LinearLayout-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:orientation="horizontal">-->

                    <!--                        <TextView-->
                    <!--                            android:id="@+id/year_tv"-->
                    <!--                            android:layout_width="match_parent"-->
                    <!--                            android:layout_height="50dp"-->
                    <!--                            android:layout_marginLeft="@dimen/margin_minimum"-->
                    <!--                            android:layout_marginTop="5dp"-->
                    <!--                            android:layout_marginRight="@dimen/margin_minimum"-->
                    <!--                            android:layout_marginBottom="5dp"-->
                    <!--                            android:layout_weight="1"-->
                    <!--                            android:background="@drawable/common_input_btn_bg"-->
                    <!--                            android:elevation="2dp"-->
                    <!--                            android:fontFamily="@font/poppins_medium"-->
                    <!--                            android:gravity="center_vertical"-->
                    <!--                            android:hint="Ad"-->
                    <!--                            android:paddingLeft="15dp"-->
                    <!--                            android:textColor="@color/hint_text_color" />-->

                    <!--                    </LinearLayout>-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/birth_title_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_minimum"
                            android:layout_marginRight="@dimen/margin_minimum"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="Doğum Tarihi *"
                            android:textColor="@color/input_text_color"
                            android:textSize="14sp" />


                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_minimum"
                            android:layout_marginRight="@dimen/margin_minimum"
                            android:layout_marginBottom="5dp"
                            app:cardBackgroundColor="@color/whitegrey"
                            app:cardCornerRadius="@dimen/commonButtonRadius"
                            app:cardElevation="2dp">

                            <TextView
                                android:id="@+id/birth_placeholder_tv"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@drawable/common_input_btn_bg"
                                android:fontFamily="@font/poppins_medium"
                                android:gravity="center_vertical"
                                android:hint="Doğum tarihi"
                                android:paddingStart="15dp"
                                android:textColor="@color/black"
                                android:textColorHint="@color/hint_text_color"
                                android:textSize="14sp" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <include
                        android:id="@+id/genderLy"
                        layout="@layout/common_spinner_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/about_title_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_minimum"
                            android:layout_marginRight="@dimen/margin_minimum"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="Doğum Tarihi *"
                            android:textColor="@color/input_text_color"
                            android:textSize="14sp" />


                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_minimum"
                            android:layout_marginRight="@dimen/margin_minimum"
                            android:layout_marginBottom="5dp"
                            app:cardBackgroundColor="@color/whitegrey"
                            app:cardCornerRadius="@dimen/commonButtonRadius"
                            app:cardElevation="2dp">

                            <EditText
                                android:gravity="left"
                                android:id="@+id/about_placeholder_tv"
                                android:layout_width="match_parent"
                                android:layout_height="120dp"
                                android:background="@drawable/common_input_btn_bg"
                                android:fontFamily="@font/poppins_medium"
                                android:hint="Doğum tarihi"
                                android:paddingStart="15dp"
                                android:paddingTop="5dp"
                                android:textColor="@color/black"
                                android:textColorHint="@color/hint_text_color"
                                android:textSize="14sp" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>


                    <Button
                        android:id="@+id/add_animal_btn"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/common_button_height"
                        android:layout_marginTop="48dp"
                        android:background="@drawable/orange_button_bg"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/add_animal"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/medium_size" />

                    <TextView
                        android:id="@+id/go_without_animal_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="50dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:text="@string/go_without_animal"
                        android:textColor="@color/orangeButton"
                        android:textSize="@dimen/medium_size" />

                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/imagelY"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="212.5dp"
            app:cardBackgroundColor="#F0F0F0"
            app:cardCornerRadius="37.5dp"
            app:cardElevation="2dp">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/image_placeholder"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:src="@drawable/image" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="222.5dp"
            android:layout_toRightOf="@id/imagelY"
            android:text="*"
            android:textColor="@color/red"
            android:textSize="14sp" />

    </RelativeLayout>
</ScrollView>