<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.login.singUp.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="305dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.11"
                android:background="@color/signup_bg_color" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="46dp"
                android:layout_marginRight="46dp"
                android:text="Tr"
                android:textColor="@color/grey"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/signup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/sign_up"
                android:textColor="@color/orangeButton"
                android:textSize="40dp" />

            <TextView
                android:id="@+id/signup_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginTop="200dp"
                android:layout_marginRight="@dimen/default_margin"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/signup_description"
                android:textColor="@color/grey"
                android:textSize="22dp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="41dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <include
                android:id="@+id/nameLy"
                layout="@layout/common_rounded_input_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/surnameLy"
                layout="@layout/common_rounded_input_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp" />

            <LinearLayout
                android:layout_marginTop="25dp"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/email_title_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_minimum"
                    android:layout_marginRight="@dimen/margin_minimum"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Ad *"
                    android:textColor="@color/input_text_color"
                    android:textSize="14sp" />


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_minimum"
                    android:layout_marginRight="@dimen/margin_minimum"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/whitegrey"
                    app:cardCornerRadius="@dimen/commonButtonRadius"
                    app:cardElevation="2dp">

                    <EditText
                        android:id="@+id/email_placeholder_tv"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/common_input_btn_bg"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center_vertical"
                        android:hint="Ad"
                        android:paddingLeft="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_text_color"
                        android:textSize="14sp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:textSize="14sp"
                        android:id="@+id/password_title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_minimum"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_marginRight="@dimen/margin_minimum"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="Şifre"
                        android:textColor="@color/input_text_color" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/password_detail_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_minimum"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_marginRight="@dimen/margin_minimum"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="10sp"
                        android:text="Şifre 1'i büyük 8 karakterden oluşmalı"
                        android:textColor="@color/input_text_color" />


                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_minimum"
                    android:layout_marginRight="@dimen/margin_minimum"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/whitegrey"
                    app:cardCornerRadius="@dimen/commonButtonRadius"
                    app:cardElevation="2dp">

                    <EditText
                        android:textSize="14sp"
                        android:id="@+id/password_placeholder_tv"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/common_input_btn_bg"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center_vertical"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:paddingStart="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_text_color" />


                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_minimum"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginRight="@dimen/margin_minimum"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="right"
                    android:text="@string/forgot_password"
                    android:textColor="@color/input_text_color"
                    android:textSize="@dimen/medium_size" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/terms_link_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kullanım Koşulları "
                    android:textColor="@color/orangeButton"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/terms_and_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ve "
                    android:textColor="@color/input_text_color"
                    android:textSize="11sp" />
                <TextView
                    android:id="@+id/privacy_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gizlilik Sözleşmesi'ni "
                    android:textColor="@color/orangeButton"
                    android:textSize="11sp" />
                <TextView
                    android:id="@+id/privacy_approve_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="onaylıyorum"
                    android:textColor="@color/input_text_color"
                    android:textSize="11sp" />
            </LinearLayout>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_button_height"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/orange_button_bg"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>